RESOLVED FIXED247921
[JSC] Implement growable SharedArrayBuffer part 2
https://bugs.webkit.org/show_bug.cgi?id=247921
Summary [JSC] Implement growable SharedArrayBuffer part 2
Yusuke Suzuki
Reported 2022-11-14 15:02:52 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2022-11-14 15:03:10 PST
Yusuke Suzuki
Comment 2 2022-11-14 15:06:25 PST
EWS
Comment 3 2022-11-16 20:51:38 PST
Committed 256766@main (fe4f0a4cc309): <https://commits.webkit.org/256766@main> Reviewed commits have been landed. Closing PR #6491 and removing active labels.
Fujii Hironori
Comment 4 2022-11-16 23:22:53 PST
Bug 248026 – REGRESSION(256766@main) TypedArrayType.h(144): error C3615: constexpr function 'JSC::logElementSize' cannot result in a constant expression
Note You need to log in before you can comment on or make changes to this bug.